<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_view_training_cycle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cycleplanning.viewtrainingcycle.ViewTrainingCycleFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_training_cycle_days"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/fab_add_training_cycle_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_training_cycle_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/string_add_training_cycle_day"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>